fix: update size of container on small devices

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 }
 
 .container {
-  min-width: 20.75rem;
+  width: 21.438rem;
 }
 
 @media screen and (min-width: 640px) {
